# cripto_wallet_auto_at

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
data/: google_client_secret_example.json
notebooks/: att-wallet.ipynb
src/: update_google_wallet_sheet.py
