[tool.poetry]
name = "att-wallet"
version = "0.1.0"
description = ""
authors = ["felipesilvaibi <felipe_ibirama@hotmail.com>"]
readme = "README.md"
packages = [{include = "att_wallet"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.1"
gspread = "^5.8.0"
oauth2client = "^4.1.3"
flake8 = "^6.0.0"
black = "^23.3.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
